--- a/sprint.html
+++ b/sprint.html
@@ -19,6 +19,7 @@
       --radius2: 26px;
       --max: 1100px;
       --pad: clamp(18px, 2.6vw, 28px);
+      --focus: rgba(140,255,210,0.55);
     }
 
     *{ box-sizing: border-box; }
@@ -37,12 +38,31 @@
 
     a{ color: inherit; text-decoration: none; }
     a:hover{ text-decoration: underline; }
+    a:focus-visible{
+      outline: 2px solid var(--focus);
+      outline-offset: 3px;
+      border-radius: 10px;
+    }
 
     .wrap{
       max-width: var(--max);
       margin: 0 auto;
       padding: 0 var(--pad);
     }
+
+    /* Skip link */
+    .skip{
+      position: absolute;
+      left: -999px;
+      top: 12px;
+      background: rgba(0,0,0,0.65);
+      border: 1px solid rgba(255,255,255,0.18);
+      color: var(--text);
+      padding: 10px 12px;
+      border-radius: 12px;
+      z-index: 999;
+    }
+    .skip:focus{ left: 12px; }
 
     /* Top bar */
     .topbar{
@@ -102,6 +122,7 @@
       padding: 8px 10px;
       border-radius: 12px;
       border: 1px solid transparent;
+      white-space: nowrap;
     }
     .nav a:hover{
       background: rgba(255,255,255,0.06);
@@ -109,7 +130,8 @@
       text-decoration: none;
       color: var(--text);
     }
-    .nav a.active{
+    .nav a.active,
+    .nav a[aria-current="page"]{
       background: rgba(255,255,255,0.08);
       border-color: rgba(255,255,255,0.14);
       color: var(--text);
@@ -277,6 +299,7 @@
       border: 1px solid rgba(255,255,255,0.14);
       background: rgba(255,255,255,0.06);
       color: rgba(255,255,255,0.86);
+      white-space: nowrap;
     }
 
     footer{
@@ -307,6 +330,8 @@
 </head>
 
 <body>
+  <a class="skip" href="#content">Skip to content</a>
+
   <header class="topbar">
     <div class="wrap">
       <div class="topbar-inner">
@@ -320,7 +345,7 @@
 
         <nav class="nav" aria-label="Primary">
           <a href="index.html">Home</a>
-          <a class="active" href="sprint.html">30-day sprint</a>
+          <a class="active" aria-current="page" href="sprint.html">30-day sprint</a>
           <a href="brief.html">Public Brief</a>
           <a href="colours.html">Colours</a>
           <a href="safety.html">Safety</a>
@@ -328,12 +353,13 @@
           <a href="commissioning.html">Commissioning</a>
           <a href="demo-brief.html">Demo Brief</a>
           <a href="faqs.html">FAQs</a>
+          <a href="contact.html">Contact</a>
         </nav>
       </div>
     </div>
   </header>
 
-  <main>
+  <main id="content">
     <!-- Hero -->
     <section>
       <div class="wrap">
@@ -385,7 +411,7 @@
       </div>
     </section>
 
-    <!-- What happens, week by week -->
+    <!-- How it runs -->
     <section>
       <div class="wrap">
         <div class="grid">
@@ -537,6 +563,7 @@
                 <a class="btn primary" href="commissioning.html">Commissioning pathway</a>
                 <a class="btn" href="demo-brief.html">View demo Brief</a>
                 <a class="btn" href="faqs.html">FAQs</a>
+                <a class="btn" href="contact.html">Contact</a>
               </div>
             </div>
           </div>
@@ -557,6 +584,7 @@
           <a href="safety.html">Safety</a>
           <a href="governance.html">Ethics and governance</a>
           <a href="commissioning.html">Commissioning</a>
+          <a href="contact.html">Contact</a>
         </div>
       </div>
 
