--- a/brief.html
+++ b/brief.html
@@ -337,17 +337,17 @@
         <div class="grid">
           <div class="card span-8">
             <div class="card-inner">
-              <div class="eyebrow"><span class="dot" aria-hidden="true"></span> A public civic artefact</div>
+              <div class="eyebrow"><span class="dot" aria-hidden="true"></span> The unit of trust</div>
               <h2>The Neighbourhood Brief</h2>
-              <p class="muted" style="margin:0 0 12px; font-size: 16px; max-width: 72ch;">
-                A short public document that turns aggregated signals into a readable view of need,
-                written with metacognitive humility and designed to trigger gentle, coordinated action.
+              <p class="muted" style="margin:0 0 12px; font-size: 16px; max-width: 76ch;">
+                A short public document that turns aggregated signals into a readable view of need.
+                It is written to be commissioning-grade, readable in minutes, and safe by design.
               </p>
 
               <div class="hero-actions">
                 <a class="btn primary" href="demo-brief.html">See a demo Brief</a>
-                <a class="btn" href="safety.html">Safety by design</a>
-                <a class="btn" href="governance.html">Ethics and governance</a>
+                <a class="btn" href="commissioning.html">How commissioning works</a>
+                <a class="btn" href="sprint.html">Start with a sprint</a>
               </div>
 
               <div class="callout">
@@ -371,11 +371,11 @@
               </li>
               <li class="item">
                 <div class="k">Partner actions <span class="tag">practical</span></div>
-                <div class="v">A small set of proportionate responses across NHS, council, VCS, and community.</div>
+                <div class="v">A small set of proportionate responses, with owners and time horizons.</div>
               </li>
               <li class="item">
                 <div class="k">The covenant <span class="tag">visible</span></div>
-                <div class="v">The boundaries that make the system safe are printed on the Brief itself.</div>
+                <div class="v">The non-negotiable boundaries are printed on the Brief itself.</div>
               </li>
             </ul>
           </div>
@@ -400,11 +400,11 @@
             <ul class="list">
               <li class="item">
                 <div class="k">No private dashboards <span class="tag">by design</span></div>
-                <div class="v">If the only view is a private analytics tool, interpretation drifts and accountability weakens.</div>
+                <div class="v">If the only view is private, accountability weakens and interpretation drifts.</div>
               </li>
               <li class="item">
                 <div class="k">Shared reality <span class="tag">partners</span></div>
-                <div class="v">NHS, council, and VCS can coordinate because they are reading the same artefact.</div>
+                <div class="v">NHS, council, and VCS coordinate because they are reading the same artefact.</div>
               </li>
               <li class="item">
                 <div class="k">Visible boundaries <span class="tag">covenant</span></div>
@@ -419,21 +419,62 @@
 
           <div class="block span-5">
             <h3>What “public” does not mean</h3>
-            <p>It does not mean revealing people or places.</p>
+            <p>It does not mean revealing people or stigmatising places.</p>
             <ul class="list">
               <li class="item">
                 <div class="k">No personal data <span class="tag">ever</span></div>
                 <div class="v">No identities, addresses, demographics, or anything that can profile an individual.</div>
               </li>
               <li class="item">
-                <div class="k">No stigmatising neighbourhoods <span class="tag">blinded</span></div>
-                <div class="v">Colours mask geography until action is necessary, then unblinding happens under governance.</div>
+                <div class="k">No “bad neighbourhoods” <span class="tag">blinded</span></div>
+                <div class="v">Geography is masked via Colours until a governed unblinding moment.</div>
               </li>
               <li class="item">
                 <div class="k">No overclaiming <span class="tag">humility</span></div>
-                <div class="v">Signals are clues. The Brief distinguishes “what we see” from “what we think it might mean”.</div>
+                <div class="v">Signals are clues. The Brief separates “what we see” from “what we think it might mean”.</div>
               </li>
             </ul>
+
+            <div class="hero-actions">
+              <a class="btn" href="safety.html">Safety by design</a>
+              <a class="btn" href="colours.html">Colours, explained</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Colours in the Brief -->
+    <section>
+      <div class="wrap">
+        <div class="grid">
+          <div class="block span-6">
+            <h3>How Colours appear in the Brief</h3>
+            <p>
+              Colours exist to avoid stigmatising areas. They keep the group blind to geography during interpretation.
+            </p>
+            <p class="muted">
+              The Brief can discuss signal strength and persistence without naming where it is,
+              until there is a clear, governed reason to unblind for action.
+            </p>
+            <div class="callout">
+              The order matters: signal first, sense-check second, action third, then location only when necessary.
+            </div>
+          </div>
+
+          <div class="block span-6">
+            <h3>Unblinding, in one line</h3>
+            <p>
+              Unblinding is a governance moment, not a feature.
+            </p>
+            <p class="muted">
+              It is done by the smallest necessary group, for the shortest necessary time,
+              for the narrow purpose of enabling proportionate action.
+            </p>
+            <div class="hero-actions">
+              <a class="btn" href="governance.html">Ethics and governance</a>
+              <a class="btn" href="colours.html">How unblinding works</a>
+            </div>
           </div>
         </div>
       </div>
@@ -450,11 +491,11 @@
             <ul class="list">
               <li class="item">
                 <div class="k">1. The covenant <span class="tag">front page</span></div>
-                <div class="v">What this is, what it is demonstrated from, and the hard boundaries.</div>
+                <div class="v">What this is, what it is derived from, and the hard boundaries.</div>
               </li>
               <li class="item">
                 <div class="k">2. Live signals <span class="tag">changes</span></div>
-                <div class="v">What is rising, falling, emerging, or persisting, with plain language and no drama.</div>
+                <div class="v">What is rising, falling, emerging, or persisting, in plain language and no drama.</div>
               </li>
               <li class="item">
                 <div class="k">3. Neighbourhood Colours <span class="tag">blinded</span></div>
@@ -462,7 +503,7 @@
               </li>
               <li class="item">
                 <div class="k">4. Partner actions <span class="tag">gentle</span></div>
-                <div class="v">A small menu of things partners can do this week, with owners and time horizons.</div>
+                <div class="v">A small menu of things partners can do, with owners and time horizons.</div>
               </li>
               <li class="item">
                 <div class="k">5. Notes and limitations <span class="tag">humility</span></div>
@@ -482,7 +523,7 @@
               </li>
               <li class="item">
                 <div class="k">Fortnightly <span class="tag">responsive</span></div>
-                <div class="v">Best when conditions are changing fast, and partner actions are active.</div>
+                <div class="v">Best when conditions are shifting and partner actions are active.</div>
               </li>
               <li class="item">
                 <div class="k">Monthly <span class="tag">steady</span></div>
@@ -493,6 +534,7 @@
             <div class="hero-actions">
               <a class="btn" href="demo-brief.html">View demo Brief</a>
               <a class="btn" href="commissioning.html">Commissioning</a>
+              <a class="btn" href="contact.html">Contact</a>
             </div>
           </div>
         </div>
@@ -506,16 +548,16 @@
           <div class="card-inner">
             <div class="grid" style="align-items:center;">
               <div class="span-7">
-                <h3 style="margin:0 0 8px; font-size: 20px;">The Brief is the unit of trust.</h3>
+                <h3 style="margin:0 0 8px; font-size: 20px;">If a commissioner can read the Brief, they can commission it.</h3>
                 <p style="margin:0; color: var(--muted); font-size: 14px;">
-                  If a commissioner can read the Brief, they can understand what they are buying, how it stays safe,
-                  and what a “response” actually looks like.
+                  The Brief makes the value legible, the boundaries visible, and the operating model obvious.
+                  That is why it is the unit of trust.
                 </p>
               </div>
               <div class="span-5" style="display:flex; gap:10px; flex-wrap:wrap; justify-content:flex-end;">
                 <a class="btn primary" href="commissioning.html">How commissioning works</a>
                 <a class="btn" href="sprint.html">Start with a sprint</a>
-                <a class="btn" href="contact.html">Contact</a>
+                <a class="btn" href="demo-brief.html">See the demo Brief</a>
               </div>
             </div>
           </div>
