--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Neighbourhood Signals, Home</title>
-  <meta name="description" content="Neighbourhood Signals is a public, safe civic listening layer that turns aggregated behaviour into a readable Neighbourhood Brief, without personal data." />
+  <meta name="description" content="Neighbourhood Signals is a public, safe civic listening layer that turns aggregated behaviour into a readable Neighbourhood Brief, without personal data, profiling, or private dashboards." />
   <style>
     :root{
       --bg: #0b0f14;
@@ -439,69 +439,69 @@
         <div class="hero-grid">
           <div class="card">
             <div class="card-inner">
-              <div class="eyebrow"><span class="dot" aria-hidden="true"></span> A civic listening layer</div>
-              <h2>Hear your neighbourhood earlier, without personal data.</h2>
+              <div class="eyebrow"><span class="dot" aria-hidden="true"></span> The canonical reference</div>
+              <h2>Neighbourhood Signals is civic listening, made public, and made safe.</h2>
               <p class="lead">
-                Neighbourhood Signals turns aggregated digital behaviour into a readable, public Neighbourhood Brief.
-                It helps places spot early strain, coordinate gentle action, and reduce avoidable demand,
-                before pressure becomes crisis.
+                It turns aggregated navigation behaviour into a readable, public Neighbourhood Brief.
+                No personal data. No profiling. No private dashboards.
+                The first commitment is always the same, a 30-day listening sprint that creates the first Brief.
               </p>
 
               <div class="hero-actions">
                 <a class="btn primary" href="sprint.html">Start with the 30-day sprint</a>
+                <a class="btn" href="brief.html">Read about the Public Brief</a>
                 <a class="btn" href="demo-brief.html">See the demo Brief</a>
-                <a class="btn" href="commissioning.html">How commissioning works</a>
               </div>
 
               <div class="mini" role="list" aria-label="Core principles">
                 <div class="pill" role="listitem">
-                  <strong>No personal data</strong>
-                  <span>Aggregated patterns only, designed to prevent profiling.</span>
+                  <strong>The sprint is the birth mechanism</strong>
+                  <span>30 days. One Brief. Then decide what depth you want next.</span>
                 </div>
                 <div class="pill" role="listitem">
-                  <strong>Public by default</strong>
-                  <span>The Brief is published as a civic artefact, not a private dashboard.</span>
+                  <strong>The Brief is the unit of trust</strong>
+                  <span>Short, readable, public, and written to avoid overclaiming.</span>
                 </div>
                 <div class="pill" role="listitem">
-                  <strong>Listening, not labelling</strong>
-                  <span>Signals are clues of need, not judgements about people or places.</span>
+                  <strong>Publicness is a safety surface</strong>
+                  <span>Visibility prevents mission creep and hidden interpretation.</span>
                 </div>
               </div>
             </div>
           </div>
 
-          <aside class="card side" aria-label="What this is and is not">
+          <aside class="card side" aria-label="What this is and how it is adopted">
             <div class="card-inner">
               <h3>What it is</h3>
-              <p>A shared neighbourhood sensor that helps partners act earlier, together.</p>
+              <p>A place-level listening layer that helps partners coordinate earlier, together.</p>
 
               <ul class="list">
                 <li class="item">
                   <div class="k">
-                    A public Brief
-                    <span class="tag">monthly or fortnightly</span>
+                    A public Neighbourhood Brief
+                    <span class="tag">the artefact</span>
                   </div>
-                  <div class="v">A short, readable view of what people are trying to get help with, and how it is changing.</div>
+                  <div class="v">A short civic document that makes patterns of need readable, shareable, and governable.</div>
                 </li>
                 <li class="item">
                   <div class="k">
                     A safe start
                     <span class="tag">30 days</span>
                   </div>
-                  <div class="v">A single listening sprint, with no integration, no identity, and clear boundaries.</div>
+                  <div class="v">A listening sprint with clear boundaries. No integration, no identity, no private dashboard layer.</div>
                 </li>
                 <li class="item">
                   <div class="k">
-                    Shared partner actions
-                    <span class="tag">low effort</span>
+                    Commissioned as civic infrastructure
+                    <span class="tag">not software</span>
                   </div>
-                  <div class="v">A small set of possible responses, across NHS, council, VCS, and community.</div>
+                  <div class="v">A small, repeatable civic capability with stewardship, cadence, and partner actions.</div>
                 </li>
               </ul>
 
               <div class="callout">
-                This is not another directory. It is a way for a place to hear itself,
-                then respond with coordination, not noise.
+                Neighbourhood CoLab CIC is the quiet delivery partner.
+                Neighbourhood Signals remains owned, governed, and shaped by the place.
               </div>
             </div>
           </aside>
@@ -515,27 +515,27 @@
           <div class="block span-7">
             <h3>What Neighbourhood Signals is</h3>
             <p>
-              Neighbourhood Signals is a public, ethically bounded listening layer that converts
-              aggregated navigation behaviour into a shared view of need.
+              Neighbourhood Signals is a public, ethically bounded listening layer that converts aggregated navigation behaviour
+              into a shared view of need through the Neighbourhood Brief.
             </p>
             <p class="muted">
               It sits underneath referrals, waiting lists, and acute pressure, in the layer where people hesitate, search,
               loop, delay, and try to self-navigate. Those attempts contain early signal.
             </p>
             <div class="callout">
-              The goal is simple, make reaching support easier than staying confused.
+              The goal is simple, we make reaching support easier than staying confused.
             </div>
           </div>
 
           <div class="block span-5">
             <h3>What it is not</h3>
-            <p>It is not surveillance. It is not behaviour scoring. It is not individual profiling.</p>
+            <p>It is not surveillance. It is not scoring. It is not individual profiling.</p>
             <p class="muted">
               It does not identify people, infer identities, or label individuals.
               If something requires personal data to be useful, it does not belong here.
             </p>
             <p class="muted">
-              The Brief is written with metacognitive humility. Signals are clues, not conclusions.
+              It is written with metacognitive humility. Signals are clues, not conclusions.
             </p>
           </div>
         </div>
@@ -552,22 +552,22 @@
               Those patterns are translated into a short Neighbourhood Brief that partners can read in minutes.
             </p>
             <p class="muted">
-              The Brief supports early coordination, prevention, and demand shaping, without asking residents to become experts in systems.
+              The point is coordination. Not reporting. Not performance management. Not a data product.
             </p>
 
             <div class="grid" style="margin-top: 12px;">
               <div class="span-12" style="display:grid; gap: 10px;">
                 <div class="item">
                   <div class="k">1. Listen safely <span class="tag">aggregate only</span></div>
-                  <div class="v">Capture patterns of navigation and intent, without identities or personal data.</div>
+                  <div class="v">Capture patterns of navigation and intent, without identities, accounts, or personal data.</div>
                 </div>
                 <div class="item">
-                  <div class="k">2. Publish the Brief <span class="tag">public artefact</span></div>
-                  <div class="v">Make the neighbourhood view visible, readable, and shareable across partners.</div>
+                  <div class="k">2. Publish the Brief <span class="tag">unit of trust</span></div>
+                  <div class="v">Publish a public civic artefact. Short. Readable. Designed to resist overinterpretation.</div>
                 </div>
                 <div class="item">
-                  <div class="k">3. Coordinate action <span class="tag">gentle response</span></div>
-                  <div class="v">Offer simple partner actions that reduce loops and move support closer to where people are.</div>
+                  <div class="k">3. Respond together <span class="tag">gentle action</span></div>
+                  <div class="v">Agree simple partner actions that reduce loops, remove friction, and move support closer to where people are.</div>
                 </div>
               </div>
             </div>
@@ -579,8 +579,8 @@
               Publicness is a safety mechanism. It prevents hidden dashboards, private interpretation, and quiet mission creep.
             </p>
             <p class="muted">
-              When the Brief is public, governance is lighter because visibility is built in.
-              It also helps communities and partners align around the same shared reality.
+              When the Brief is public, the governance surface is visible.
+              It also helps partners align around the same shared reality, with the same language, at the same time.
             </p>
             <a class="btn" href="brief.html">Read about the Public Brief</a>
           </div>
@@ -594,14 +594,14 @@
           <div class="block span-5">
             <h3>Neighbourhood Colours</h3>
             <p>
-              Colours are how we keep Neighbourhood Signals non-stigmatising. They are a blinding layer.
+              Colours are a blinding convention. They are not a risk scale.
             </p>
 
             <div class="colours" aria-label="Neighbourhood Colours">
               <div class="colour">
                 <div class="row">
                   <strong>Neighbourhood Blue</strong>
-                  <span class="badge blue">signal band</span>
+                  <span class="badge blue">blinded band</span>
                 </div>
                 <div class="muted" style="font-size: 13px;">
                   A clear pattern that something is forming. Enough to discuss and prepare, without naming where it is.
@@ -611,7 +611,7 @@
               <div class="colour">
                 <div class="row">
                   <strong>Neighbourhood Yellow</strong>
-                  <span class="badge yellow">signal band</span>
+                  <span class="badge yellow">blinded band</span>
                 </div>
                 <div class="muted" style="font-size: 13px;">
                   A stronger or persistent pattern. Enough to plan a coordinated response, still blinded to place.
@@ -620,8 +620,7 @@
             </div>
 
             <div class="callout" style="margin-top: 12px;">
-              We stay blind to geography until it is time for action, then unblinding happens under governance,
-              with the smallest necessary group.
+              Geography stays masked until a governed unblinding moment, with the smallest necessary group.
             </div>
 
             <div style="margin-top: 12px;">
@@ -651,14 +650,14 @@
       <div class="wrap">
         <div class="grid">
           <div class="block span-12">
-            <h3>Safety is the product</h3>
+            <h3>Safety is the architecture</h3>
             <p>
               Neighbourhood Signals is designed as civic infrastructure, not analytics.
-              Safety is not an afterthought, it is the architecture.
+              Safety is not an afterthought, it is the system.
             </p>
             <p class="muted">
-              Core safeguards include: no personal data, no identity inference, no private dashboards, loop protection, and a governance covenant.
-              The Brief is written to avoid overclaiming, and to encourage proportionate, gentle action.
+              Core safeguards include: no personal data, no identity inference, no private dashboards, loop protection,
+              and a governance covenant. The Brief is written to avoid stigma and overclaiming, and to support proportionate response.
             </p>
             <div class="hero-actions">
               <a class="btn" href="safety.html">Safety by design</a>
@@ -675,7 +674,7 @@
           <div class="block span-7">
             <h3>The 30-day listening sprint</h3>
             <p>
-              The sprint is the simplest possible commitment. A place listens for 30 days, publishes the first Brief, then decides what comes next.
+              The sprint is the first commitment and the first proof. A place listens for 30 days, publishes the first Brief, then decides what comes next.
             </p>
             <p class="muted">
               No integration. No long contract. No hidden complexity.
@@ -690,11 +689,10 @@
           <div class="block span-5">
             <h3>Commissioning, in plain terms</h3>
             <p>
-              After the sprint, commissioning is about choosing the depth of listening and the cadence of response.
+              After the sprint, commissioning is choosing the depth of listening and the cadence of response, with governance that stays simple because the Brief stays public.
             </p>
             <p class="muted">
-              Neighbourhood Signals can be commissioned as a lightweight civic layer with clear tiers, governance, and partner actions,
-              anchored in local stewardship.
+              Neighbourhood Signals is commissioned as a civic layer with clear tiers, stewarded locally, and designed to be copied by other places.
             </p>
             <a class="btn" href="commissioning.html">Commissioning pathway</a>
           </div>
@@ -710,13 +708,13 @@
               <div class="span-7">
                 <h3 style="margin:0 0 8px; font-size: 20px;">If you can say yes to one thing, say yes to listening once.</h3>
                 <p style="margin:0; color: var(--muted); font-size: 14px;">
-                  A 30-day sprint creates your first Neighbourhood Brief. From there, commissioning becomes a response to your own evidence,
+                  A 30-day sprint creates your first public Neighbourhood Brief. From there, commissioning becomes a response to your own evidence,
                   not a leap of faith.
                 </p>
               </div>
               <div class="span-5" style="display:flex; gap:10px; flex-wrap:wrap; justify-content:flex-end;">
                 <a class="btn primary" href="sprint.html">Run a sprint</a>
-                <a class="btn" href="commissioning.html">Commission it</a>
+                <a class="btn" href="brief.html">Understand the Brief</a>
                 <a class="btn" href="faqs.html">Read FAQs</a>
                 <a class="btn" href="contact.html">Contact</a>
               </div>
@@ -735,16 +733,17 @@
           <span>Public listening, civic coordination, safe by design.</span>
         </div>
         <div style="display:flex; gap:12px; flex-wrap:wrap;">
+          <a href="sprint.html">30-day sprint</a>
+          <a href="brief.html">Public Brief</a>
           <a href="safety.html">Safety</a>
           <a href="governance.html">Ethics and governance</a>
           <a href="commissioning.html">Commissioning</a>
-          <a href="demo-brief.html">Demo Brief</a>
           <a href="contact.html">Contact</a>
         </div>
       </div>
 
       <div style="margin-top: 16px; color: rgba(255,255,255,0.45); font-size: 12px;">
-        © <span id="year"></span> Neighbourhood Signals. Built as civic infrastructure, not a product dashboard.
+        © <span id="year"></span> Neighbourhood Signals. Commissioned as civic infrastructure, not a private dashboard.
       </div>
     </div>
   </footer>
